--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,1 +1,42 @@
-/*This is the css*/
+@media screen and (min-width: 365px){
+    .hidden-on-desktop{
+        max-width: 100%;
+        background-color: lightblue;
+        border: gray 1px solid;
+        text-align: center;
+        padding: 10px
+    }
+    .hidden-on-desktop a{
+        text-decoration: none;
+        color: black;
+    }
+    h1{
+        text-align: center;
+    }
+    ul{
+        list-style: none;
+        text-align: center;
+
+    }
+    li{
+        background-color: gray;
+        margin-top: 5px;
+        margin-bottom: 5px;
+        padding: 10px;
+
+
+    }
+    ul.nav-links{
+        padding-left: 0;
+    }
+    img, .header-img{
+        height: 100%;
+        width: 100%;
+    }
+
+    .sub-section {
+        font-style: italic;
+    }
+}
+
+@media screen and (min-width: 934px) {}
