--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -4,6 +4,7 @@
         background-color: lightblue;
         border: gray 1px solid;
         text-align: center;
+        padding: 10px
     }
     .hidden-on-desktop a{
         text-decoration: none;
@@ -21,7 +22,7 @@
         background-color: gray;
         margin-top: 5px;
         margin-bottom: 5px;
-        padding: 5px;
+        padding: 10px;
 
 
     }
@@ -29,7 +30,11 @@
         padding-left: 0;
     }
     img, .header-img{
-        height: 224px;
-        width: 339px;
+        width: 100%;
+        height: 100%;
+    }
+
+    .sub-section {
+        font-style: italic;
     }
 }
